%%{init: {"theme": "neutral"}}%%
classDiagram
direction TB

class LevelState {
  + status() GameState
  + liveScore Int
  + ticking(delta) LevelState
  + collecting() LevelState
}

class ValidatedMap {
  + spawn Position
  + isWalkable(position) Boolean
}

class MovingEntity {
  + currentPos Position
  + facing Direction
  + movement Option~Movement~
}

class Enemy {
  + kind EnemyKind
}

class Collectibles {
  <<interface>>
  + remaining Int
  + collect(position) Collected
}

class ActiveEffects {
  <<interface>>
  + active(now) Set~BonusEffect~
}

class LevelProgress {
  + lives Int
}

class GameMode {
  <<interface>>
  + status(progress, collectibles, clock) GameState
}

class ScoreTracker {
  + currentScore Int
  + combo Int
}

class GameClock {
  + elapsed FiniteDuration
}

LevelState "1" *-- "1" ValidatedMap : maze
LevelState "1" *-- "1" MovingEntity : player
LevelState "1" *-- "0..*" Enemy : enemies
LevelState "1" *-- "1" Collectibles : items left
LevelState "1" *-- "1" ActiveEffects : active bonuses
LevelState "1" *-- "1" LevelProgress : lives
LevelState "1" *-- "1" ScoreTracker : score
LevelState "1" *-- "1" GameClock : elapsed time
LevelState "1" --> "1" GameMode : rules

Enemy "1" *-- "1" MovingEntity : movement
GameMode <|.. Normal
GameMode <|.. Timed
GameMode <|.. Survival
